Se añaden estilos para los diferentes botones

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -68,7 +68,7 @@
 	--header-height-web: 4em;
 
 	// Variables para prototipar
-	--border-radius: #{$l-unit * 2}; // 8px
+	--border-radius: #{$l-unit}; // 4px
 	// Layout
 	--margin-base: #{$l-unit}; // 4px
 	--vertical-block-space: #{$l-unit * 0}; // 0px
