--- a/src/scss/modules/_colors.scss
+++ b/src/scss/modules/_colors.scss
@@ -1,4 +1,71 @@
 
 // Nombre de clases para aplicar colores
 
-// ESTO PODRIA ELIMINARSE
+// Colores para fondo de botones ghost
+.ghost {
+
+	&-secondary-color {
+		color: var(--secondary-color);
+		border: 1px solid var(--secondary-color);
+
+		&:hover {
+			color: var(--bg-container);
+			background: var(--secondary-color);
+		}
+	}
+
+	&-error300-color {
+		color: var(--error-300);
+		border: 1px solid var(--error-300);
+
+		&:hover {
+			color: var(--bg-container);
+			background: var(--error-300);
+		}
+	}
+
+	&-primary900-color {
+		color: var(--bg-battle);
+		border: 1px solid var(--bg-battle);
+
+		&:hover {
+			color: var(--bg-container);
+			background: var(--bg-battle);
+		}
+	}
+
+}
+
+// Colores para fondo de botones para seguidores
+
+.follow {
+
+	&-primary-color {
+		background: var(--primary-color);
+		border: 1px solid var(--ternary-alt-color);
+
+		&:hover {
+			background: var(--primary-alt-color);
+		}
+	}
+
+	&-warning500-color {
+		background: var(--warning-500);
+		border: 1px solid var(--warning-300);
+
+		&:hover {
+			background: var(--warning-700);
+		}
+	}
+
+
+	&-success500-color {
+		background: var(--success-500);
+		border: 1px solid var(--success-300);
+
+		&:hover {
+			background: var(--success-700);
+		}
+	}
+
+}
