--- a/src/scss/modules/_menu.scss
+++ b/src/scss/modules/_menu.scss
@@ -32,7 +32,7 @@
 
 	&:hover > .content-color,
 	&:hover > .container-icon-menu  {
-		color: var(--primary-color);
+		color: var(--primary-alt-color);
 	}
 
 	& > .active {
@@ -56,7 +56,7 @@
 	}
 
 	&:hover > .container-icon-nav  {
-		color: var(--primary-color);
+		color: var(--primary-alt-color);
 	}
 
 	& > .active {
@@ -82,6 +82,10 @@
 	}
 
 	&:hover {
+		border: 2px solid var(--primary-alt-color);
+	}
+
+	& > .active {
 		border: 2px solid var(--primary-color);
 	}
 }
