Creación del componente CardItemRanking + estilos

--- a/src/scss/modules/_colors.scss
+++ b/src/scss/modules/_colors.scss
@@ -81,3 +81,41 @@
 .auxiliary-color {
 	color: var(--auxiliary-color);
 }
+
+// Colores basicos
+.primary-color {
+	color: var(--primary-color);
+}
+
+.secondary-color {
+	color: var(--secondary-color);
+}
+
+// Colores para las divisiones
+.heraldo-divition {
+	color: var(--heraldo);
+}
+
+.guardian-divition {
+	color: var(--guardian);
+}
+
+.cruzado-divition {
+	color: var(--cruzado);
+}
+
+.arconte-divition {
+	color: var(--arconte);
+}
+
+.leyenda-divition {
+	color: var(--leyenda);
+}
+
+.ancestral-divition {
+	color: var(--ancestral);
+}
+
+.divino-divition {
+	color: var(--divino);
+}
