--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -37,3 +37,5 @@ $l-unit: .25rem;		// (4px) Unidad básica de layout(para separaciones verticales
 
 // Estilos components
 @import "components/categorie";
+@import "components/ranking";
+
