--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -37,6 +37,7 @@ $l-unit: .25rem;		// (4px) Unidad básica de layout(para separaciones verticales
 
 // Estilos components
 @import "components/categorie";
+@import "components/home";
 @import "components/listFollow";
 @import "components/notifications";
 @import "components/ranking";
