--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -38,7 +38,9 @@ $l-unit: .25rem;		// (4px) Unidad básica de layout(para separaciones verticales
 // Estilos components
 @import "components/categorie";
 @import "components/home";
+@import "components/listAchievement";
 @import "components/listFollow";
 @import "components/notifications";
+@import "components/profile";
 @import "components/ranking";
 
