--- a/src/scss/modules/_text.scss
+++ b/src/scss/modules/_text.scss
@@ -15,3 +15,9 @@
 .text-justify {
 	text-align: justify;
 }
+
+.text-overflow {
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
+}
