--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -44,4 +44,5 @@ $l-unit: .25rem;		// (4px) Unidad básica de layout(para separaciones verticales
 @import "components/notifications";
 @import "components/profile";
 @import "components/ranking";
+@import "components/screenGame";
 
