Componentes generales para pantalla final clásico

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -44,5 +44,6 @@ $l-unit: .25rem;		// (4px) Unidad básica de layout(para separaciones verticales
 @import "components/notifications";
 @import "components/profile";
 @import "components/ranking";
+@import "components/screenFinish";
 @import "components/screenGame";
 
