--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -41,6 +41,7 @@ $l-unit: .25rem;		// (4px) Unidad básica de layout(para separaciones verticales
 @import "components/home";
 @import "components/listAchievement";
 @import "components/listFollow";
+@import "components/login";
 @import "components/notifications";
 @import "components/profile";
 @import "components/ranking";
