--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -45,6 +45,7 @@ $l-unit: .25rem;		// (4px) Unidad básica de layout(para separaciones verticales
 @import "components/notifications";
 @import "components/profile";
 @import "components/ranking";
+@import "components/register";
 @import "components/screenFinish";
 @import "components/screenGame";
 
