--- a/src/scss/components/_listAchievement.scss
+++ b/src/scss/components/_listAchievement.scss
@@ -1,5 +1,9 @@
 
 // Estilos para la página lista de logros
+.container-achievementpage {
+	padding-top: rem(44px);
+	padding-bottom: rem(64px);
+}
 
 .container-listAchievement {
 	padding: rem(16px);
