--- a/src/scss/components/_notifications.scss
+++ b/src/scss/components/_notifications.scss
@@ -1,5 +1,10 @@
 
 // Estilos para la página de notificaciones o solicitudes
+.container-notificationpage {
+	padding-top: rem(44px);
+	padding-bottom: rem(64px);
+}
+
 
 .container-listRequest {
 	padding: rem(16px);
