--- a/src/scss/components/_ranking.scss
+++ b/src/scss/components/_ranking.scss
@@ -1,6 +1,34 @@
 
 // Estilos para la pagina de clasificación
 
+.container-rankingpage {
+	padding-top: rem(44px);
+	padding-bottom: rem(120px);
+
+	& > h1 {
+		margin-bottom: rem(20px);
+	}
+
+	& > h3 {
+		margin-bottom: rem(32px);
+	}
+
+}
+
+.container-sectionCards_ranking {
+	grid-column-end: span 12;
+	grid-column-start: 1;
+
+	@include from(m) {
+		grid-column-end: span 7;
+		grid-column-start: 1;
+	}
+}
+
+.container-allItemCards_ranking {
+	margin-bottom: rem(24px);
+}
+
 .container-card_ranking {
 	padding-right: rem(16px);
 	padding-left: rem(16px);
@@ -116,6 +144,22 @@
 	border-radius: var(--border-radius);
 	background: var(--bg-container);
 	padding: rem(20px) rem(16px);
+	grid-column-end: span 12;
+	grid-column-start: 1;
+	height: max-content;
+	margin-bottom: rem(32px);
+
+	@include fromTo(421px, m) {
+		grid-column-end: span 10;
+		grid-column-start: 2;
+	}
+
+	@include from(m) {
+		grid-column-end: span 5;
+		grid-column-start: 8;
+		margin-bottom: rem(0px);
+	}
+
 }
 
 .container-item_divition {
