--- a/src/scss/modules/_menu.scss
+++ b/src/scss/modules/_menu.scss
@@ -87,7 +87,7 @@
 		border: 2px solid var(--primary-alt-color);
 	}
 
-	& > .active {
+	&.active {
 		border: 2px solid var(--primary-color);
 	}
 }
