Funcionalidades, reducers, actions, styles para el modal de editar perfil

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -42,6 +42,7 @@ $l-unit: .25rem;		// (4px) Unidad básica de layout(para separaciones verticales
 @import "components/listAchievement";
 @import "components/listFollow";
 @import "components/login";
+@import "components/modal";
 @import "components/notifications";
 @import "components/profile";
 @import "components/ranking";
