--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -1,6 +1,7 @@
 
 // Estilos para la página principal/home
-.container-homepage {
+.container-homepage,
+.container-errorpage {
 	padding-top: rem(44px);
 	padding-bottom: rem(120px);
 
@@ -14,6 +15,18 @@
 
 	@include from(m) {
 		padding-bottom: rem(64px);
+	}
+}
+
+.container-errorpage {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	height: calc( 100vh - var(--header-height-mobile) );
+
+	@include from(m) {
+		height: calc( 100vh - var(--header-height-web) );
 	}
 }
 
