Estilos generales para los skeletons

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -49,4 +49,5 @@ $l-unit: .25rem;		// (4px) Unidad básica de layout(para separaciones verticales
 @import "components/register";
 @import "components/screenFinish";
 @import "components/screenGame";
+@import "components/skeleton";
 
