--- a/src/scss/components/_skeleton.scss
+++ b/src/scss/components/_skeleton.scss
@@ -16,7 +16,7 @@
 
 	& > span {
 
-		position: absolute;
+		// position: absolute;
 		top: 0;
 		left: 0;
 		width: rem(40px);
@@ -35,7 +35,7 @@
 	position: relative;
 
 	& > span {
-		position: absolute;
+		// position: absolute;
 		top: 0;
 		left: 0;
 		width: rem(48px);
